apps/services/kubevirt/app/openclaw.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    kubevirt.io/vm: openclaw
  name: openclaw-svc
spec:
  ports:
  - name: ssh
    port: 22
    protocol: TCP
  - name: vnc
    port: 5901
    protocol: TCP
  - name: openclaw-ui-http
    port: 18789
    protocol: TCP
  selector:
    kubevirt.io/vm: openclaw
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openclaw
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Autonomous AI Agent
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: openclaw.png
    gethomepage.dev/name: OpenClaw
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: openclaw.internal
      http:
        paths:
          - backend:
              service:
                name: openclaw-svc
                port:
                  number: 18789
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - openclaw.internal
      secretName: homelab-tls
